# phrases-case

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: pythonpackage.yml
phrases_case/: __init__.py
src/: __init__.py
tests/: test_phrases_case.py
