[tool.poetry]
name = "phrases-case"
version = "0.1.0"
description = "Convert phrases between diffrent cases."
authors = ["NateScarlet <NateScarlet@Gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~2.7 || ^3.4"

[tool.poetry.dev-dependencies]
pytest = "^4.1"
3to2 = "^1.1"
pylint = {version="^2.4", python = "^3.5"}
autopep8 = {version="^1.4", python = "^3.5"}
tox = "^3.14"

[tool.tox]
legacy_tox_ini = """
[tox]
skipsdist = true
envlist = py27, py34, py35, py36, py37, py38

[testenv]
whitelist_externals = poetry
skip_install = true
commands =
    poetry install -vv
    poetry run pytest
"""

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
